# solo2-desktop

./: .eslintrc.cjs  .gitignore  .release-please-manifest.json  .releaserc.yaml  CHANGELOG.md  README.md  dprint.json  index.html  package.json  pnpm-lock.yaml  release-please-config.json  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1663531740200.mjs
.github/workflows/: checks.yml  output-release-id.js  publish.yml  rust-clippy.yml
docs/: CHANGELOG.md
isolation/: index.html  index.js
src/: App.svelte  app.css  app.d.ts  app.ts  hooks.server.ts  types.ts
src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  fido2.rs  list.rs  main.rs  oath.rs  solo.rs  update.rs
src/lib/: AddOath.svelte  Breadcrumbs.d.ts  Breadcrumbs.svelte  KeyCard.svelte  KeyList.svelte  KeyListCard.svelte  Nav.svelte  OathCard.svelte  TotpCard.svelte  keyName.ts
src/lib/header/: Header.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts  keys.svelte  totp.svelte
src/routes/totp/: +page.svelte
src/routes/totp/[uuid]/: +page.svelte  +page.ts
