[package]
name = "solo2-desktop"
version = "1.0.0-alpha.24"
authors = ["oplik0"]
default-run = "solo2-desktop"
edition = "2021"
license = "MIT"
repository = "https://github.com/oplik0/solo2-desktop.git"
rust-version = "1.68"
description = "An Unofficial Solo2 Desktop App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = ["isolation"] }

[dependencies]
indicatif = "0.17.3"
memoize = { version = "0.4.0", features = ["lru"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solo2 = { version = "0.2.2", features = ["dev-pki"] }
tauri = { version = "1.2.4", features = ["clipboard-write-text", "dialog-open", "isolation", "shell-open", "updater", "window-set-decorations"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tokio = { version = "1.25.0", features = ["sync", "time"] }
ureq = "2.6.2"
usb_enumeration = "0.2.0"
window-vibrancy = "0.3.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev.package.pcsc]
debug-assertions = false
[profile.dev.package.pcsc-sys]
debug-assertions = false
